--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.2",
     "node": "^23.4.0",
+    "nodemon": "^3.1.10",
     "zod": "^3.24.1"
   }
 }
